# agora-ru

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/config/: config.toml
backend/migrations/: 01_init.sql
backend/src/: main.rs
backend/src/db/: mod.rs  setup.rs  users.rs
backend/src/handlers/: auth.rs
backend/src/helpers/: telegram.rs
backend/src/models/: app.rs  user.rs
frontend/: Dockerfile  nuxt.config.ts  package-lock.json  package.json
frontend/assets/css/: font.css  reset.css
frontend/assets/scss/: _variables.scss
frontend/components/: Header.vue
frontend/composables/: useApi.ts
frontend/layouts/: default.vue
frontend/pages/: auth.vue  index.vue
