[package]
name = "agora-ru-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "tls-rustls-ring", "uuid", "postgres", "macros", "chrono"] }
dotenvy = "0.15" # для загрузки .env в локальной разработке
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
actix-cors = "0.7.1"
